Make the docker image much more simple